@@ -10,7 +10,7 @@ import java.security.NoSuchAlgorithmException;
 
 
 public class Walk {
-    static String ZEROES = "0".repeat(40);
+    public static String ERROR_WHILE_READING_FILE = "0".repeat(40);
 
     public static void main(String[] args) {
         if (args == null || args.length != 2 || args[0] == null || args[1] == null) {
@@ -18,74 +18,75 @@ public class Walk {
             return;
         }
 
-        try {
-            Path inputPath = Path.of(args[0]);
-            Path outputPath = Path.of(args[1]);
-        } catch (InvalidPathException e) {
-            System.err.println("Invalid path" + " " + e.getMessage());
+        if (checkPath(args[0], "input")) {
             return;
+        }
+        if (checkPath(args[1], "output")) {
+            return;
+        }
+
+        File outputFile = new File(args[1]);
+        if (outputFile.getParent() != null && !outputFile.getParentFile().isDirectory()) {
+            try {
+                Path path = Paths.get(outputFile.getPath());
+                Files.createDirectories(path);
+            } catch (IOException e) {
+                System.err.println("Failed to create parent directory" + " " + e.getMessage());
+                return;
+            }
         }
 
         try (BufferedReader reader = Files.newBufferedReader(Path.of(args[0]));
              BufferedWriter writer = Files.newBufferedWriter(Path.of(args[1]))) {
 
-            File inputFile = new File(args[0]);
-            File outputFile = new File(args[1]);
-
-            if (outputFile.getParent() != null && !outputFile.getParentFile().isDirectory()) {
+            String path;
+            while ((path = reader.readLine()) != null) {
+                StringBuilder result = new StringBuilder();
+                MessageDigest md = MessageDigest.getInstance("SHA-1");
+                Path filePath = null;
                 try {
-                    Path path = Paths.get(outputFile.getPath());
-                    Files.createDirectories(path);
-                } catch (IOException e) {
-                    System.err.println("Failed to create directory" + " " + e.getMessage());
-                    return;
+                    filePath = Path.of(path);
+                } catch (InvalidPathException e) {
+                    result.append(ERROR_WHILE_READING_FILE);
                 }
-            }
-
-            if (!inputFile.isFile()) {
-                System.err.println("No input file");
-            } else {
-                String path;
-                while ((path = reader.readLine()) != null) {
-                    StringBuilder result = new StringBuilder();
-                    MessageDigest md = MessageDigest.getInstance("SHA-1");
-                    Path filePath = null;
-                    try {
-                        filePath = Path.of(path);
-                    } catch (InvalidPathException e) {
-                        result.append(ZEROES);
-                    }
-                    if (filePath != null && Files.notExists(filePath) && result.length() == 0) {
-                        result.append(ZEROES);
-                    }
-                    if (result.length() == 0) {
-                        try (InputStream inputStream = Files.newInputStream(Path.of(path))) {
-                            int n = 0;
-                            byte[] buffer = new byte[8000];
-                            while (n != -1) {
-                                n = inputStream.read(buffer);
-                                if (n > 0) {
-                                    md.update(buffer, 0, n);
-                                }
+                if (filePath != null && Files.notExists(filePath)) {
+                    result.append(ERROR_WHILE_READING_FILE);
+                }
+                if (result.length() == 0) {
+                    try (InputStream inputStream = Files.newInputStream(Path.of(path))) {
+                        int n = 0;
+                        byte[] buffer = new byte[8000];
+                        while (n != -1) {
+                            n = inputStream.read(buffer);
+                            if (n > 0) {
+                                md.update(buffer, 0, n);
                             }
-                            for (byte b : md.digest()) {
-                                result.append(String.format("%02x", b));
-                            }
-                        } catch (Exception e) {
-                            result.append(ZEROES);
                         }
+                        for (byte b : md.digest()) {
+                            result.append(String.format("%02x", b));
+                        }
+                    } catch (IllegalArgumentException | UnsupportedOperationException | IOException | SecurityException | NullPointerException e) {
+                        result.append(ERROR_WHILE_READING_FILE);
                     }
-                    writer.write(result + " " + path + "\n");
                 }
+                writer.write(result + " " + path + "\n");
             }
         } catch (IOException e) {
-            System.err.println("Failed to find input file" + " " + e.getMessage());
+            System.err.println("Input or output exception" + " " + e.getMessage());
         } catch (NoSuchAlgorithmException e) {
             System.err.println("Failed to find algorithm" + " " + e.getMessage());
         } catch (SecurityException e) {
             System.err.println("Security exception" + " " + e.getMessage());
         }
+    }
 
+    public static boolean checkPath(String path, String message) {
+        try {
+            Path filePath = Path.of(path);
+        } catch (InvalidPathException e) {
+            System.err.println("Invalid path to " + message + " file" + " " + e.getMessage());
+            return true;
+        }
+        return false;
     }
 }
-
